<resources>
    <string name="app_name" translatable="false">movieApp</string>
    <string name="developer" translatable="false">J. Diego Rodríguez</string>
    <string name="user" translatable="false">admin</string>
    <string name="password" translatable="false">admin</string>
    <string name="add_a_movie">Add a movie</string>
    <string name="phone" translatable="false">+34625454546</string>
    <string name="mail" translatable="false">alu.103413@usj.es</string>
    <string name="telegramUser" translatable="false">JDiegoRodriguez</string>
    <string name="developed_by">Developed by J. Diego Rodriguez</string>
    <string name="tb_main_title">Movies</string>
    <string name="contact_title">Contact</string>
    <string name="movieList_title">Titles</string>
    <string name="movieList_genre">Genres</string>
    <string name="movieList_actors">Actors</string>
    <string name="searchMovie">Search for a movie</string>
    <string name="btn_fav_title">Filter by favorites</string>
    <string name="btn_no_fav_title">Remove filter by favorites </string>
    <string name="btn_search_title">Search</string>
    <string name="btn_mail_title">Mail</string>
    <string name="btn_call_title">Telephone</string>
    <string name="btn_telegram_title" translatable="false">Telegram</string>
    <string name="movie_editor_edit_title">Edit the movie</string>
    <string name="movie_editor_new_title">Add a movie</string>
    <string name="dialog_host_cancel">Continue offline</string>
    <string name="dialog_host_connect">Connect</string>
    <string name="ed_newHost_hint">IP or host</string>
    <string name="tv_host_dialog_reconnect_title">Could\'t not connect to the host</string>
    <string name="tv_host_dialog_reconnect_message">Specify other host or retry it later</string>
    <string name="tv_host_dialog_first_connect">Set a host</string>
    <string name="tv_splashscreen_info_connecting">Establishing connection</string>
    <string name="tv_splashscreen_info_fetching">Downloading last updated data</string>
    <string name="tv_splashscreen_info_first_fetch">Downloading the database</string>
    <string name="toast_host_dialog">Press back again to continue offline</string>
    <string name="tv_splashscreen_info_update_complete">Update complete</string>
    <string name="tv_splashscreen_info_offline_mode">offline mode</string>
    <string name="tv_movie_item_runtime">%d minutes</string>
    <string name="tv_actor_genre_item_movies">%d movies</string>
    <string name="tv_actor_movies_finding">Finding movies…</string>
    <string name="actor_editor_edit_title">Edit the actor</string>
    <string name="actor_editor_new_title">Add an actor</string>
    <string name="genre_editor_edit_title">Edit the genre</string>
    <string name="genre_editor_new_title">Add an genre</string>
    <string name="title_contextual_delete">Delete</string>
    <string name="title_contextual_add_fav">Add to favorites</string>
    <string name="title_contextual_rmv_fav">Remove from favorites</string>
    <string name="title_contextual_edit">Edit</string>
    <string name="tv_editor_empty_name">The name can\'t not be empty</string>
    <string name="movie_poster">Poster</string>
    <string name="movie_title">Title</string>
    <string name="movie_year">Year</string>
    <string name="movie_runtime">Runtime</string>
    <string name="movie_director">Director</string>
    <string name="movie_description">Description</string>
    <string name="movie_revenue">Revenue in millions</string>
    <string name="movie_votes">Votes</string>
    <string name="movie_rating">Rating</string>
    <string name="movie_actors">Actors</string>
    <string name="movie_genres">Genres</string>
    <string name="movie_editor_description_hint">Write a description about the movie</string>
    <string name="movie_editor_director_hint">Director\'s name</string>
    <string name="movie_editor_runtime_hint">Minutes</string>
    <string name="movie_editor_title_hint">Movie title</string>
    <string name="actor_genre_name">Name</string>
    <string name="tb_editor_autocomplete">Autocomplete</string>
    <string name="tb_editor_save">Save</string>
</resources>