<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editors.MovieEditor">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_movie_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_close_24" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_movie_editor"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/tv_movie_editor_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/im_movie_editor_poster"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/et_movie_editor_director"
                app:layout_constraintDimensionRatio="22:33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_editor_poster"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_movie_editor_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                app:layout_constraintStart_toStartOf="@+id/et_movie_editor_title"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_movie_editor_title"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/movie_editor_title_hint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/im_movie_editor_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_editor_title"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tv_movie_editor_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movie_year"
                app:layout_constraintStart_toStartOf="@+id/et_movie_editor_title"
                app:layout_constraintTop_toBottomOf="@id/et_movie_editor_title" />

            <Spinner
                android:id="@+id/spinner_movie_editor_year"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/et_movie_editor_runtime"
                app:layout_constraintEnd_toStartOf="@+id/et_movie_editor_runtime"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/im_movie_editor_poster"
                app:layout_constraintStart_toStartOf="@+id/tv_movie_editor_year"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_editor_year" />

            <TextView
                android:id="@+id/tv_movie_editor_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movie_runtime"
                app:layout_constraintStart_toStartOf="@+id/et_movie_editor_runtime"
                app:layout_constraintTop_toBottomOf="@+id/et_movie_editor_title" />

            <EditText
                android:id="@+id/et_movie_editor_runtime"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/movie_editor_runtime_hint"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/spinner_movie_editor_year"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_editor_runtime"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tv_movie_editor_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movie_director"
                app:layout_constraintStart_toStartOf="@+id/spinner_movie_editor_year"
                app:layout_constraintTop_toBottomOf="@+id/et_movie_editor_runtime" />

            <EditText
                android:id="@+id/et_movie_editor_director"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/movie_editor_director_hint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_movie_editor_director"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_editor_director"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/tv_movie_editor_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movie_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_movie_editor_director" />

            <EditText
                android:id="@+id/et_movie_editor_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/movie_editor_description_hint"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_editor_description"
                android:importantForAutofill="no" />


            <TextView
                android:id="@+id/tv_movie_editor_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movie_revenue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_movie_editor_description" />

            <EditText
                android:id="@+id/et_movie_editor_revenue"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="$$$.$$$"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toStartOf="@+id/et_movie_editor_votes"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_editor_revenue"
                android:importantForAutofill="no"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/et_movie_editor_votes"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="299792"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/et_movie_editor_rating"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/et_movie_editor_revenue"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_editor_votes"
                android:importantForAutofill="no"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tv_movie_editor_votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movie_votes"
                app:layout_constraintStart_toStartOf="@+id/et_movie_editor_votes"
                app:layout_constraintTop_toBottomOf="@+id/et_movie_editor_description" />

            <TextView
                android:id="@+id/tv_movie_editor_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movie_rating"
                app:layout_constraintStart_toStartOf="@+id/et_movie_editor_rating"
                app:layout_constraintTop_toBottomOf="@+id/et_movie_editor_description" />

            <TextView
                android:id="@+id/tv_movie_editor_rating_limits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="#AC0000"
                android:text="0-10"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_movie_editor_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_movie_editor_rating"
                tools:ignore="HardcodedText"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/et_movie_editor_rating"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="9.807"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/et_movie_editor_votes"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_editor_rating"
                tools:ignore="HardcodedText"
                android:importantForAutofill="no" />

            <ImageButton
                android:id="@+id/ib_movie_editor_show_actors"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/tv_movie_editor_actors"
                app:layout_constraintEnd_toEndOf="@+id/tv_movie_editor_actors"
                app:layout_constraintTop_toTopOf="@+id/tv_movie_editor_actors"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_24"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/tv_movie_editor_actors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:hapticFeedbackEnabled="true"
                android:text="@string/movie_actors"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_movie_editor_revenue" />

            <ImageButton
                android:id="@+id/ib_movie_editor_select_actors"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="#00FFFFFF"
                android:visibility="gone"
                android:translationZ="5dp"
                android:outlineProvider="none"
                app:layout_constraintBottom_toBottomOf="@+id/tv_movie_editor_actors"
                app:layout_constraintEnd_toStartOf="@id/ib_movie_editor_show_actors"
                app:layout_constraintTop_toTopOf="@+id/tv_movie_editor_actors"
                app:srcCompat="@drawable/outline_add_24"
                tools:ignore="ContentDescription" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_actors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_editor_actors"
                tools:listitem="@layout/actor_genre_item" />

            <ImageButton
                android:id="@+id/ib_movie_editor_show_genres"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/tv_movie_editor_genres"
                app:layout_constraintEnd_toEndOf="@+id/tv_movie_editor_genres"
                app:layout_constraintTop_toTopOf="@+id/tv_movie_editor_genres"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_24"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/tv_movie_editor_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/movie_genres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_actors"
                android:hapticFeedbackEnabled="true"/>

            <ImageButton
                android:id="@+id/ib_movie_editor_select_genres"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="#00FFFFFF"
                android:outlineProvider="none"
                android:visibility="gone"
                android:translationZ="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_movie_editor_genres"
                app:layout_constraintEnd_toStartOf="@id/ib_movie_editor_show_genres"
                app:layout_constraintTop_toTopOf="@+id/tv_movie_editor_genres"
                app:srcCompat="@drawable/outline_add_24"
                android:hapticFeedbackEnabled="true"
                tools:ignore="ContentDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_editor_genres"
                tools:listitem="@layout/actor_genre_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>